--- a/src/html/blocks/_modals.htm
+++ b/src/html/blocks/_modals.htm
@@ -1,17 +1,68 @@
 <div class="graph-modal">
   <div class="graph-modal__container" role="dialog" aria-modal="true" data-graph-target="service1">
     <button class="graph-modal__close js-modal-close" aria-label="Закрыть модальное окно"></button>
-    <div class="graph-modal__content">service1</div>
+    <div class="graph-modal__content service-order">
+      <h2 class="service-order__title graph-modal__title subtitle">Заказать сайт визитку</h2>
+      <form method="post" class="form service-order__form service-order__form--card">
+        <label class="service-order__label form__label">
+          <input class="form__input input-name" placeholder="Имя*" type="text" name="name">
+        </label>
+        <label class="service-order__label form__label">
+          <input class="form__input input-tel" placeholder="Телефон" type="tel" name="tel" autocomplete="off">
+        </label>
+        <label class="service-order__label form__label">
+          <input class="form__input input-email" placeholder="E-mail*" type="email" name="email">
+        </label>
+        <label class="service-order__hidden" hidden>
+          <input type="text" name="service-order" value="site_card">
+        </label>
+        <button class="service-order__btn btn btn--dark">Оформить заявку</button>
+      </form>
+    </div>
   </div>
 
   <div class="graph-modal__container" role="dialog" aria-modal="true" data-graph-target="service2">
     <button class="graph-modal__close js-modal-close" aria-label="Закрыть модальное окно"></button>
-    <div class="graph-modal__content">service2</div>
+    <div class="graph-modal__content">
+      <h2 class="service-order__title graph-modal__title subtitle">Заказать лендинг</h2>
+      <form method="post" class="form service-order__form service-order__form--landing">
+        <label class="service-order__label form__label">
+          <input class="form__input input-name" placeholder="Имя*" type="text" name="name">
+        </label>
+        <label class="service-order__label form__label">
+          <input class="form__input input-tel" placeholder="Телефон" type="tel" name="tel" autocomplete="off">
+        </label>
+        <label class="service-order__label form__label">
+          <input class="form__input input-email" placeholder="E-mail*" type="email" name="email">
+        </label>
+        <label class="service-order__hidden" hidden>
+          <input type="text" name="service-order" value="site_langing">
+        </label>
+        <button class="service-order__btn btn btn--dark">Оформить заявку</button>
+      </form>
+    </div>
   </div>
 
   <div class="graph-modal__container" role="dialog" aria-modal="true" data-graph-target="service3">
     <button class="graph-modal__close js-modal-close" aria-label="Закрыть модальное окно"></button>
-    <div class="graph-modal__content">service3</div>
+    <div class="graph-modal__content">
+      <h2 class="service-order__title graph-modal__title subtitle">Заказать интернет магазин</h2>
+      <form method="post" class="form service-order__form service-order__form--shop">
+        <label class="service-order__label form__label">
+          <input class="form__input input-name" placeholder="Имя*" type="text" name="name">
+        </label>
+        <label class="service-order__label form__label">
+          <input class="form__input input-tel" placeholder="Телефон" type="tel" name="tel" autocomplete="off">
+        </label>
+        <label class="service-order__label form__label">
+          <input class="form__input input-email" placeholder="E-mail*" type="email" name="email">
+        </label>
+        <label class="service-order__hidden" hidden>
+          <input type="text" name="service-order" value="site_shop">
+        </label>
+        <button class="service-order__btn btn btn--dark">Оформить заявку</button>
+      </form>
+    </div>
   </div>
 
 
