добавлен последний блок технологии требует редактирования

--- a/src/html/blocks/_modals.htm
+++ b/src/html/blocks/_modals.htm
@@ -66,52 +66,100 @@
   </div>
 
 
-
-
-
-  <div class="graph-modal__container" role="dialog" aria-modal="true" data-graph-target="step1">
+  <!-- <div hidden class="graph-modal__container modal-step" role="dialog" aria-modal="true" data-graph-target="step1">
     <button class="graph-modal__close js-modal-close" aria-label="Закрыть модальное окно"></button>
-    <div class="graph-modal__content">step1</div>
+    <div class="graph-modal__content">
+      <div class="pre-project">
+        <h2 class="pre-project__title subtitle">Предпроектный анализ</h2>
+        <div class="pre-project__tabs tabs" data-tabs="preproject">
+          <ul class="tabs__nav">
+            <li class="tabs__nav-item">
+              <button class="tabs__nav-btn" type="button">Звонок</button>
+            </li>
+            <li class="tabs__nav-item">
+              <button class="tabs__nav-btn" type="button">Бриф</button>
+            </li>
+            <li class="tabs__nav-item">
+              <button class="tabs__nav-btn" type="button">Обсуждение</button>
+            </li>
+          </ul>
+          <div class="tabs__content">
+            <div class="tabs__panel">
+              <div class="modal-step__content">
+                <div class="tabs__descr">
+                  <p></p>
+                </div>
+                <div class="tabs__text"></div>
+              </div>
+
+            </div>
+            <div class="tabs__panel">
+              <div class="modal-step__content">
+                <div class="tabs__descr">
+                  <p>Lorem, ipsum dolor.</p>
+                  <p>Lorem, ipsum dolor.</p>
+                  <p>Lorem, ipsum dolor.</p>
+                  <p>Lorem, ipsum dolor.</p>
+                </div>
+                <div class="tabs__text"></div>
+              </div>
+            </div>
+            <div class="tabs__panel">
+              <div class="modal-step__content">
+                <div class="tabs__descr">
+                  <p>Lorem, ipsum dolor.</p>
+
+                  <p>Lorem, ipsum dolor.</p>
+                  <p>Lorem, ipsum dolor.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 
-  <div class="graph-modal__container" role="dialog" aria-modal="true" data-graph-target="step2">
+  <div hidden class="graph-modal__container" role="dialog" aria-modal="true" data-graph-target="step2">
     <button class="graph-modal__close js-modal-close" aria-label="Закрыть модальное окно"></button>
     <div class="graph-modal__content">step2</div>
   </div>
 
 
-  <div class="graph-modal__container" role="dialog" aria-modal="true" data-graph-target="step3">
+  <div hidden class="graph-modal__container" role="dialog" aria-modal="true" data-graph-target="step3">
     <button class="graph-modal__close js-modal-close" aria-label="Закрыть модальное окно"></button>
     <div class="graph-modal__content">step3</div>
   </div>
 
 
-  <div class="graph-modal__container" role="dialog" aria-modal="true" data-graph-target="step4">
+  <div hidden class="graph-modal__container" role="dialog" aria-modal="true" data-graph-target="step4">
     <button class="graph-modal__close js-modal-close" aria-label="Закрыть модальное окно"></button>
     <div class="graph-modal__content">step4</div>
   </div>
 
 
-  <div class="graph-modal__container" role="dialog" aria-modal="true" data-graph-target="step5">
+  <div hidden class="graph-modal__container" role="dialog" aria-modal="true" data-graph-target="step5">
     <button class="graph-modal__close js-modal-close" aria-label="Закрыть модальное окно"></button>
     <div class="graph-modal__content">step5</div>
   </div>
 
 
-  <div class="graph-modal__container" role="dialog" aria-modal="true" data-graph-target="step6">
+  <div hidden class="graph-modal__container" role="dialog" aria-modal="true" data-graph-target="step6">
     <button class="graph-modal__close js-modal-close" aria-label="Закрыть модальное окно"></button>
     <div class="graph-modal__content">step6</div>
   </div>
 
 
-  <div class="graph-modal__container" role="dialog" aria-modal="true" data-graph-target="step7">
+  <div hidden class="graph-modal__container" role="dialog" aria-modal="true" data-graph-target="step7">
     <button class="graph-modal__close js-modal-close" aria-label="Закрыть модальное окно"></button>
     <div class="graph-modal__content">step7</div>
   </div>
 
 
-  <div class="graph-modal__container" role="dialog" aria-modal="true" data-graph-target="step8">
+  <div hidden class="graph-modal__container" role="dialog" aria-modal="true" data-graph-target="step8">
     <button class="graph-modal__close js-modal-close" aria-label="Закрыть модальное окно"></button>
     <div class="graph-modal__content">step8</div>
-  </div>
+  </div> -->
+
+
 </div>
