--- a/src/html/section/_steps.htm
+++ b/src/html/section/_steps.htm
@@ -15,7 +15,7 @@
               <h3 class="step__title subtitle">Предпроектный анализ</h3>
               <p class="step__text">Оценка требований. Проводим опрос для понимания задач и особенностей бизнеса.
                 Изучаем конкурентов. Определяем целевую аудиторию</p>
-              <button data-graph-path="step1" class="step__btn"
+              <button data-graph-path="step1" class="step__btn" hidden
                 aria-label="Показать подробную информацию">Подробнее</button>
             </div>
           </div>
@@ -31,7 +31,7 @@
               <h3 class="step__title subtitle">Проектирование</h3>
               <p class="step__text">Собирается базовое семантическое ядро. Разработка карты сайта, список разделов и
                 страниц. Подготовка и согласование эскиза сайта.</p>
-              <button data-graph-path="step2" class="step__btn"
+              <button data-graph-path="step2" class="step__btn" hidden
                 aria-label="Показать подробную информацию">Подробнее</button>
             </div>
           </div>
@@ -48,7 +48,7 @@
               <p class="step__text">Разрабатывается каркас сайта. Определяем какие блоки будут на сайте, в какой
                 последовательности будут располагаться, логотип, телефон, почта, социальные сети. Вносятся правки
                 согласнов ваших пожеланий.</p>
-              <button data-graph-path="step3" class="step__btn"
+              <button data-graph-path="step3" class="step__btn" hidden
                 aria-label="Показать подробную информацию">Подробнее</button>
             </div>
           </div>
@@ -64,7 +64,7 @@
               <h3 class="step__title subtitle">Разработка дизайна</h3>
               <p class="step__text">На основе прототипа разрабатывается дизайн. Выбирается цветовая гамма, шрифты,
                 композиция элементов на экранах. Отрисовываются иконки, обрабатываются изображения.</p>
-              <button data-graph-path="step4" class="step__btn"
+              <button data-graph-path="step4" class="step__btn" hidden
                 aria-label="Показать подробную информацию">Подробнее</button>
             </div>
           </div>
@@ -80,7 +80,7 @@
               <h3 class="step__title subtitle">Программирование</h3>
               <p class="step__text">По макету разработанному дизайнером верстается сайт. При необходимости
                 разрабатывается структура баз данных, програмируется бизнес логика.</p>
-              <button data-graph-path="step5" class="step__btn"
+              <button data-graph-path="step5" class="step__btn" hidden
                 aria-label="Показать подробную информацию">Подробнее</button>
             </div>
           </div>
@@ -96,7 +96,7 @@
               <h3 class="step__title subtitle">Тестирование</h3>
               <p class="step__text">Проверка отсутствия ошибок в коде (html, css, js), работа элементов согласно задания
                 и дизайн макета, кросбраузерность. Тестирование работы сервеной части. </p>
-              <button data-graph-path="step6" class="step__btn"
+              <button data-graph-path="step6" class="step__btn" hidden
                 aria-label="Показать подробную информацию">Подробнее</button>
             </div>
           </div>
@@ -112,7 +112,7 @@
             <div class="step__content">
               <h3 class="step__title subtitle">Запуск проекта</h3>
               <p class="step__text">Проверка и покупка доменного имени. Выбор хостинга, установка сайта на сервер.</p>
-              <button data-graph-path="step7" class="step__btn"
+              <button data-graph-path="step7" class="step__btn" hidden
                 aria-label="Показать подробную информацию">Подробнее</button>
             </div>
           </div>
@@ -128,7 +128,7 @@
               <h3 class="step__title subtitle">Продвижение и развитие</h3>
               <p class="step__text">Анализ позиций в поисковой выдаче. Рекомендации по редактированию (дополнению)
                 семантики, контента, блоков, страниц сайта.</p>
-              <button data-graph-path="step8" class="step__btn"
+              <button data-graph-path="step8" class="step__btn" hidden
                 aria-label="Показать подробную информацию">Подробнее</button>
             </div>
           </div>
