--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,9 @@
     @@include('html/section/_steps.htm')
     @@include('html/section/_portfolio.htm')
     @@include('html/section/_order.htm')
-    @@include('html/section/_workers.htm')
+    @@include('html/section/_reviews.htm')
+    @@include('html/section/_technology.htm')
+    @@include('html/section/_contact.htm')
 
   </main>
 
