добавил последний блок необходимо редактирование контента на всем сайте

--- a/src/html/section/_reviews.htm
+++ b/src/html/section/_reviews.htm
@@ -14,9 +14,9 @@
 
             </div>
             <div class="review__right">
-              <div class="review__client">
-                <p>Kimax38 производство и доставка еды</p>
-              </div>
+              <h3 class="review__client">
+                Kimax38 производство и доставка еды
+              </h3>
               <p class="review__text">Все работы были сделаны четко и в срок. Нам было очень легко и приятно работать со
                 специалистами компании, на каждом этапе работы предлагались варианты, давались дельные рекомендации.
                 Очень понравилась вовлеченность специалиство в процесс и заинтересованность в том, чтобы сайт получился
@@ -36,9 +36,9 @@
 
             </div>
             <div class="review__right">
-              <div class="review__client">
-                <p>Услуги астролога</p>
-              </div>
+              <h3 class="review__client">
+                Услуги астролога
+              </h3>
               <p class="review__text">Остались очень довольны сотрудничеством.Особенно хотелось бы отметить открытость
                 взаимодействия, стремление разобраться в особенностях и специфике нашей сферы деятельности, и сделать
                 результат максимально отвечающим потребностям нашей компании. Так же хотелось бы отметить способность
@@ -53,14 +53,14 @@
           <div class="review__item">
             <div class="review__left">
               <div class="review__img">
-                <img height="40" width="auto" src="@img/logo/logo_repetitor38.webp" alt="логотип услуги репетитора">
+                <img height="40" width="auto" src="@img/logo/logo_repetitor381.webp" alt="логотип услуги репетитора">
               </div>
 
             </div>
             <div class="review__right">
-              <div class="review__client">
-                <p>Услуги репетитора по информатике</p>
-              </div>
+              <h3 class="review__client">
+                Услуги репетитора по информатике
+              </h3>
               <p class="review__text">Остались очень довольны сотрудничеством.Особенно хотелось бы отметить открытость
                 взаимодействия, стремление разобраться в особенностях и специфике нашей сферы деятельности, и сделать
                 результат максимально отвечающим потребностям нашей компании. Так же хотелось бы отметить способность
