--- a/src/html/section/_technology.htm
+++ b/src/html/section/_technology.htm
@@ -1,21 +1,59 @@
 <section class="technology">
   <div class="technology__container container">
     <h2 class="visually-hidden">О нас</h2>
-    <p class="about__descr">
-      <span class="about__descr-hight">Технологии</span>
-      – верстка страниц сайта на чистом HTML5, CSS3, JS. Серверная часть Python, Flask, Django.
-    </p>
-    <p class="about__descr">
-      <span class="about__descr-hight">Технологии</span>
-      – верстка страниц сайта на чистом HTML5, CSS3, JS. Серверная часть Python, Flask, Django.
-    </p>
-    <p class="about__descr">
-      <span class="about__descr-hight">Технологии</span>
-      – верстка страниц сайта на чистом HTML5, CSS3, JS. Серверная часть Python, Flask, Django.
-    </p>
-    <p class="about__descr">
-      <span class="about__descr-hight">Технологии</span>
-      – верстка страниц сайта на чистом HTML5, CSS3, JS. Серверная часть Python, Flask, Django.
-    </p>
+    <div class="technology__descr">
+      <h3 class="technology__descr-hight">Основная и дополнительная деятельность</h3>
+      <p class="technology__text">
+        Наша команда создает уникальные продающие сайты,
+        логотипы компаний, дизайн будующих страниц сайта,
+        обучает персоонал заказчика работе с сайтом, составляет броские заголовки
+        страниц и тексты с ключевыми запросами по тематике. Подбирает медиа контент
+        с правами свободного использования или генерирует его.
+        Дополнительно занимаемся парсингом данных, созданием телеграмм ботов,
+        конфигурированием и обучением простых нейросетей.
+      </p>
+    </div>
+
+
+    <div class="technology__descr">
+      <h3 class="technology__descr-hight">Технологии которые мы используем</h3>
+      <p class="technology__text">
+        Верстка страниц сайта на чистом HTML5, CSS3, JS. Серверная часть Python, Flask, Django. Административная панель
+        Django. Помогаем в подборе доменного имени и хостинга. Дополнительно настраиваем собственный веб сервер,
+        используем Ubuntu, Nginx, postgresql, Django, Flask.
+      </p>
+    </div>
+    <div class="technology__descr">
+      <h3 class="technology__descr-hight">Гарантии</h3>
+      <p class="technology__text">
+        Работаем по согласованному между сторонами техническому заданию, оплата производиться поэтапно. Готовый сайт
+        отображает одинаково контент на последних трех версиях браузеров (кроссбраузерный), не
+        содержит ошибок HTML верски, CSS стилей, JS кода, при проверке Lighthouse набирает более
+        90% по всем показателям.
+      </p>
+    </div>
+  </div>
+  <div class="technology__icons container">
+    <img height="60" width="auto" src="@img/section/technology/logo_html.webp" alt="иконка html"
+      class="technology__icon">
+    <img height="60" width="auto" src="@img/section/technology/logo_css.webp" alt="иконка css" class="technology__icon">
+    <img height="60" width="auto" src="@img/section/technology/logo_js.webp" alt="иконка js" class="technology__icon">
+    <img height="60" width="auto" src="@img/section/technology/logo_python1.webp" alt="иконка python"
+      class="technology__icon">
+    <img height="60" width="auto" src="@img/section/technology/logo_ubuntu.webp" alt="иконка ubuntu"
+      class="technology__icon">
+    <img height="60" width="auto" src="@img/section/technology/logo_nginx.webp" alt="иконка nginx"
+      class="technology__icon">
+
+    <img height="60" width="auto" src="@img/section/technology/logo_django.webp" alt="иконка django"
+      class="technology__icon technology__icon--big">
+    <img height="60" width="auto" src="@img/section/technology/logo_flask.webp" alt="иконка flask"
+      class="technology__icon technology__icon--big">
+
+    <img height="60" width="auto" src="@img/section/technology/logo_postgresql.webp" alt="иконка postgresql"
+      class="technology__icon technology__icon--ext-big">
+    <img height="60" width="auto" src="@img/section/technology/logo_lighthouse.webp" alt="иконка lighthouse"
+      class="technology__icon  technology__icon--ext-big">
+
   </div>
 </section>
